Fix reduced width overflows

--- a/src/css/_policy-grid.scss
+++ b/src/css/_policy-grid.scss
@@ -24,7 +24,6 @@
 
 .policy-title--grid {
     display: table;
-    width: 100%;
     border-spacing: 0;
     border-top: 1px solid $c-neutral3;
     border-bottom: 1px solid $c-neutral6;
@@ -45,9 +44,12 @@
 
 .policy-title--grid__all {
     padding-left: $gs-gutter;
-    font-size: 18px;
     width: 100%;
     text-align: right;
+    font-size: 0; // To keep the width 100%
+    @media (min-width: $breakpoint1) {
+        font-size: 18px;
+    }
 }
 
 .policy-title--top-bar > .policy-title__title {
